@@ -1,5 +1,8 @@
 2000-12-05  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* configure.in: check for struct sockaddr_storage.
+	* acinclude.m4 (NIH_HAVE_STRUCT): generic check for a struct.
+
 	* sockets.c (sopen): new version with inet6 support.
 
 2000-12-04  Dieter Baron  <dillo@danbala.tuwien.ac.at>
